[package]
name = "imageparse"
version = "0.1.0"
authors = ["Niels Wießner <n.h.wiessner@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
serde-support = ["serde", "serde_derive"]
chd = ["chdr"]
multithreading = []

[dependencies]
log = "0.4"
vec_map = "0.8.2"
serde = { version = "1.0.8", optional = true }
serde_derive = { version = "1.0.8", optional = true }
thiserror = "1.0"
chdr = { git = "https://github.com/Manorhos/chdr-rs", rev = "30cd257", optional = true }

[dev-dependencies]
env_logger = "0.3.5"
