[package]
name = "imageparse"
version = "0.1.0"
authors = ["Niels Wießner <n.h.wiessner@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
serde-support = ["serde", "serde_derive"]
multithreading = ["lru"]
chd = ["chd_rs", "text_io"]
chd_verify_block_crc = ["chd_rs/verify_block_crc"]
default = ["chd"]

[dependencies]
log = "0.4"
vec_map = "0.8.2"
serde = { version = "1.0.8", optional = true }
serde_derive = { version = "1.0.8", optional = true }
thiserror = "1.0"
chd_rs = { package = "chd", version = "0.1.4", optional = true }
text_io = { version = "0.1.10", optional = true }
lru = { version = "0.7.3", optional = true }

[dev-dependencies]
env_logger = "0.3.5"
